# mlops2025w_142201025

./: .gitignore  .gitmodules  Readme.md
assignments/: pyproject.toml
assignments/assignment-2/: README.md  run.sh
assignments/assignment-2/docs/: usage.md
assignments/assignment-2/src/: calculator.py  utils.py
assignments/assignment-3/: Assignment.md  README.md  document.md  main.py  pyproject.toml  q1,json
assignments/assignment-3/configs/: data_config.json  hparam_grid.json  model_params.toml
assignments/assignment-3/src/resnet_pipeline/: __init__.py  inference.py  models.py  run_inference.py  train.py  tune.py  utils.py
assignments/assignment-3/src/resnet_pipeline/helper/: config.py  data.py  model.py
assignments/assignment-3/src/resnet_pipeline/sample_datasets/: __init__.py  cifar10.py  mnist.py
assignments/assignment-4/: Assignment.md  README.md  config.toml  pyproject.toml
assignments/assignment-4/sql/: schema.sql
assignments/assignment-4/src/databases/: utils.py
assignments/assignment-4/src/databases/helpers/: __init__.py  prepare_data.py  utils.py
assignments/assignment-4/src/databases/mongo/: __init__.py  crud_operations.py  ingest_collections.py  ingest_customers.py  ingest_transactions.py  performance_test.py
assignments/assignment-4/src/databases/scripts/: prepare_data.py
assignments/assignment-4/src/databases/sqlite/: __init__.py  populate_db.py  prepare_db.py
assignments/assignment-4/src/databases/utils/: __init__.py  config.py  data.py
assignments/assignment-5/: Assignment.md  README.md  pyproject.toml
assignments/assignment-5/resources/: results_from_wandb.json
assignments/assignment-5/src/assignment_5/: __init__.py  cifar_seq_learning.py  conll2003_labelling.py  conll2003_major_label_voter.py  conll2003_stats.py  datasets.py  q1.py
class/: add.sh  pyproject.toml  revision_difference.txt
class/week11/: mlops_wandb_monitoring_lab(1).ipynb
class/week3/: add_fac_rev.sh
class/week4/: README.md  app.py  pyproject.toml  train.py
class/week7/: pyproject.toml
class/week7/notebooks/: main.ipynb
class/week8/: README.md  pyproject.toml  wandb_cloud_deploy_lab_detailed.ipynb
class/week8/app/: README.md  main.py
class/week8/src/: compare-models.py  train.py
class/week9/: .env.example  cifar100_wandb_hf.ipynb  uvicorn_logs.txt
class/week9/app/: requirements.txt
resources/: README.md
