[project]
name = "class-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "ipykernel>=7.0.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.38.0",
    "wandb>=0.22.2",
]
