[project]
name = "resnet-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
download-mnist = "resnet_pipeline.sample_datasets.mnist:main"
download-cifar10 = "resnet_pipeline.sample_datasets.cifar10:main"
inference = "resnet_pipeline.run_inference:main" # 3a
train = "resnet_pipeline.train:main" # 3d
grid-search = "resnet_pipeline.tune:main" # 3e

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resnet_pipeline"]
