[project]
name = "resnet-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
download = "resnet_pipeline.sample_datasets:main"
inference = "resnet_pipeline:main_inference"
train = "resnet_pipeline:main_train"
grid-search = "resnet_pipeline:main_tune"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resnet_pipeline"]
