[project]
name = "databases"
version = "0.1.0"
description = "Databases Assignment On SQL and NOSQL"
authors = [
    { name = "Geetheswar V", email = "geetheswar.edu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "pymongo>=4.8.0",
]

[project.scripts]
prepare_data = "databases.helpers.prepare_data:main"
prepare_db = "databases.sqlite:prepare_db"
populate_db = "databases.sqlite:populate_db"
ingest_transactions = "databases.mongo.ingest_transactions:main"
ingest_customers = "databases.mongo.ingest_customers:main"


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
