[project]
name = "assignment-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "geetheswar-v", email = "geetheswar.edu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
assignment-5 = "assignment_5:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
