[project]
name = "assignment-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "geetheswar-v", email = "geetheswar.edu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "snorkel>=0.10.0",
    "wandb>=0.22.2",
]

[project.scripts]
question-1 = "assignment_5.conll2003_stats:main"
question-2 = "assignment_5.conll2003_labelling:main"
question-3 = "assignment_5.conll2003_major_label_voter:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
