[project]
name = "week8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wheel>=0.45.1",
]
